--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -1,14 +1,12 @@
-# ArchiveAegis 平台配置文件 V1
-
-# 网关服务自身的配置
+# ArchiveAegis 平台配置文件 V2 - 动态插件发现
 server:
   port: 10224
-  log_level: "info" # 可选: debug, info, warn, error
+  log_level: "info"
 
-# 数据源注册中心
-datasources:
-  - name: "sales_report_db"
-    type: "sqlite_plugin"
+# 数据源插件列表
+# 网关会尝试连接下面的所有地址，并动态注册它们所声明的业务
+plugins:
+  # - "localhost:50051" # 你的 SQLite 插件
+  # - "another-plugin.example.com:50051" # 其他插件
+  - address: "localhost:50051"
     enabled: true
-    params:
-      address: "localhost:50051"
