--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,3 +1,4 @@
+# .github/workflows/proto-check.yml
 name: Build & Check Proto
 
 on:
@@ -22,14 +23,17 @@ jobs:
         uses: actions/setup-go@v5
         with:
           go-version: '1.23'
+          cache: true
+
+      - name: Download Go module dependencies
+        run: go mod download
 
       - name: Install Task (cross-platform task runner)
         uses: arduino/setup-task@v2
 
       - name: Install Protobuf + Plugins
         run: |
-          sudo apt-get update
-          sudo apt-get install -y protobuf-compiler
+          sudo apt-get update && sudo apt-get install -y protobuf-compiler
           go install google.golang.org/protobuf/cmd/protoc-gen-go@latest
           go install google.golang.org/grpc/cmd/protoc-gen-go-grpc@latest
           echo "${HOME}/go/bin" >> $GITHUB_PATH
